resources/assets/less/app.less
html {
    box-sizing: border-box;
}
*, *:before, *:after {
    box-sizing: inherit;
}

@import "vendor/bootstrap/bootstrap";
@import "utilities";
@import "github";
@import "components/gistlog";
@import "components/comment";
@import "components/notice";

@btn-font-weight: 300;
@font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
@font-family-monospace: Consolas, Menlo, Monaco, "Courier New", monospace;

/**
 * Bootstrap-esque
 */

/**
 * Custom
 */

body, label, .checkbox label {
    font-weight: 300;
}

img {
    max-width: 100%;
}

.logo {
    height: 1.2em;
}

.container {
    max-width: 730px;
    position: relative;
}

.profile-pic {
    display: block;
    margin: 0 auto 1.5em;
    width: 10em;

    img {
        border: 5px solid #eee;
        border-radius: 5em;
        height: 10em;
        width: 10em;
    }
}

code {
    white-space: pre-wrap;
    word-wrap: break-word;
}

